Added more tabs

--- a/Lab1/Lab1/Base.lproj/Main.storyboard
+++ b/Lab1/Lab1/Base.lproj/Main.storyboard
@@ -127,16 +127,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="37b-5M-Yqd">
-                                <rect key="frame" x="0.0" y="171" width="600" height="216"/>
-                                <date key="date" timeIntervalSinceReferenceDate="474923478.65016502">
-                                    <!--2016-01-19 19:11:18 +0000-->
-                                </date>
-                            </datePicker>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BQQ-C2-sPs">
+                                <rect key="frame" x="0.0" y="179" width="600" height="216"/>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="What type of beer do you like?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T42-8v-uvt">
+                                <rect key="frame" x="195" y="102" width="233" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cel-iM-ezI">
+                                <rect key="frame" x="279" y="451" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="ZW2-hI-Zdb"/>
+                    <connections>
+                        <outlet property="beerPicker" destination="BQQ-C2-sPs" id="fli-Ac-u9q"/>
+                        <outlet property="choiceLabel" destination="Cel-iM-ezI" id="I52-ef-u8T"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iDO-V6-B93" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
