--- a/Lab2/Lab2/Base.lproj/Main.storyboard
+++ b/Lab2/Lab2/Base.lproj/Main.storyboard
@@ -1,25 +1,106 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="J5X-gh-AMs">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="lv6-Bb-Ltf">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="J5X-gh-AMs" customClass="ViewController" customModule="Lab2" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="bur-oN-sq5">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellIdentifier" textLabel="Cwq-xo-7sF" detailTextLabel="oJM-8i-RpJ" rowHeight="44" style="IBUITableViewCellStyleSubtitle" id="3MJ-qk-KI7">
+                                <rect key="frame" x="0.0" y="50" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3MJ-qk-KI7" id="46L-lE-aDc">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Cwq-xo-7sF">
+                                            <rect key="frame" x="15" y="5" width="32" height="20"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oJM-8i-RpJ">
+                                            <rect key="frame" x="15" y="25" width="41" height="14"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="5B4-wj-TFY" kind="presentation" id="rAr-8g-t3o"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="J5X-gh-AMs" id="6cT-kV-6rR"/>
+                            <outlet property="delegate" destination="J5X-gh-AMs" id="fLg-3O-dfQ"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l2j-am-KY5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="451" y="270"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="Ynv-U9-jNI">
+            <objects>
+                <viewController id="5B4-wj-TFY" customClass="MapViewController" customModule="Lab2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="40J-vg-g4c"/>
+                        <viewControllerLayoutGuide type="bottom" id="9GP-4g-h1I"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="x9u-IY-z2d">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="19h-d3-NO2">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem id="RSq-qp-cT8">
+                                        <barButtonItem key="backBarButtonItem" title="Back" id="G5u-hv-U9V"/>
+                                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="GWo-Mr-SLo">
+                                            <connections>
+                                                <segue destination="Onn-hy-aTf" kind="unwind" unwindAction="unwindSegue:" id="EDx-WA-xn5"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="4wu-MQ-xmE">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4wu-MQ-xmE" firstAttribute="bottom" secondItem="9GP-4g-h1I" secondAttribute="top" id="9kx-e6-wuy"/>
+                            <constraint firstItem="19h-d3-NO2" firstAttribute="top" secondItem="40J-vg-g4c" secondAttribute="bottom" id="Fg5-wy-nxd"/>
+                            <constraint firstAttribute="trailing" secondItem="4wu-MQ-xmE" secondAttribute="trailing" id="JKO-IC-5UL"/>
+                            <constraint firstItem="4wu-MQ-xmE" firstAttribute="trailing" secondItem="19h-d3-NO2" secondAttribute="trailing" id="L2D-cc-n47"/>
+                            <constraint firstItem="4wu-MQ-xmE" firstAttribute="top" secondItem="19h-d3-NO2" secondAttribute="bottom" id="Y4m-Pb-X6u"/>
+                            <constraint firstItem="19h-d3-NO2" firstAttribute="leading" secondItem="4wu-MQ-xmE" secondAttribute="leading" id="fal-fe-JKI"/>
+                            <constraint firstItem="4wu-MQ-xmE" firstAttribute="leading" secondItem="x9u-IY-z2d" secondAttribute="leading" id="j14-Q0-PxJ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="osx-PP-2ZG"/>
+                    <connections>
+                        <outlet property="mapView" destination="4wu-MQ-xmE" id="mrU-QK-OAG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qiu-Uk-PaE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Onn-hy-aTf" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1216" y="257"/>
         </scene>
     </scenes>
 </document>
