--- a/Lab2/Lab2/Base.lproj/LaunchScreen.storyboard
+++ b/Lab2/Lab2/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,32 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="building" translatesAutoresizingMaskIntoConstraints="NO" id="F1U-Wl-JzL">
+                                <rect key="frame" x="147" y="142" width="307" height="271"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="307" id="KZT-hO-pEN"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MapCU" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M8J-Tx-2c1">
+                                <rect key="frame" x="233" y="98" width="135" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="5rp-jd-I4v"/>
+                                    <constraint firstAttribute="width" constant="135" id="U6r-z9-MvK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="F1U-Wl-JzL" secondAttribute="bottom" constant="187" id="AfG-zO-LMY"/>
+                            <constraint firstItem="F1U-Wl-JzL" firstAttribute="top" secondItem="M8J-Tx-2c1" secondAttribute="bottom" constant="8" symbolic="YES" id="OH5-7O-wIv"/>
+                            <constraint firstItem="M8J-Tx-2c1" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="78" id="Shs-m2-ORj"/>
+                            <constraint firstItem="M8J-Tx-2c1" firstAttribute="centerX" secondItem="F1U-Wl-JzL" secondAttribute="centerX" id="TAg-kd-8wx"/>
+                            <constraint firstItem="M8J-Tx-2c1" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="VVW-uf-fqY"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +49,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="building" width="600" height="402"/>
+    </resources>
 </document>
